add javadoc and start problemDetailPage

--- a/myforestnew/bin/.gitignore
+++ b/myforestnew/bin/.gitignore
@@ -1,4 +1,4 @@
-/ProblemForm.class
-/ProblemPage$ButtonListener.class
-/ProblemForm$ButtonListener.class
-/TaskPage.class
+/ShopPage.class
+/ChatPage.class
+/ProblemDetailPage.class
+/ProblemDetailPage$ButtonListener.class
